--- a/app/views/main/editor.html.erb
+++ b/app/views/main/editor.html.erb
@@ -5,7 +5,7 @@
     <div class="hero-content">
       <h1>Get consistent work that pays well</h1>
       <h5>Focus on editing and join a community of audio editors</h5>
-        <%= button_to "Join now", editor_signup_path,
+        <%= button_to "Start Editing", editor_signup_path,
         :class => "mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored create-podcast-button",
         :method => :get %>
     </div>
