--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -20,7 +20,7 @@
             <li>Remove the 'ahs' and 'ums' </li>
             <li>Reduce background noise</li>
             <li>Master to level volume</li>
-            <li>Add supplied into and outro music</li>
+            <li>Add supplied into and outro</li>
         </ul>
     </div>
     <div class="how-it-works-col <%= selectable ? "selectable" : "" %>" data-name="distribute" data-value="distribute">
